# livekit

./: .gitignore  config-moq-local.yaml  config-sample.yaml  go.mod  go.sum  magefile.go
examples/moq-camera-publisher/: Cargo.toml  README.md
examples/moq-camera-publisher/src/: main.rs
pkg/config/: config.go
pkg/rtc/: externaltrack.go  externaltrack_test.go
pkg/service/: moqservice.go  server.go  wire.go  wire_gen.go
