[package]
name = "moq-camera-publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nokhwa = { version = "0.10.10", features = ["input-native"] }
openh264 = "0.9.3"
quinn = "0.11.9"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "time"] }
